- Add a line to fix the popup UI on mobile - Hide the WebRTC logs

--- a/app/widgets/Visio/visio.css
+++ b/app/widgets/Visio/visio.css
@@ -84,6 +84,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+    display: none;
 }
 
 #visio #log div {
